2009-12-07  Joanmarie Diggs  <joanmarie.diggs@gmail.com>

        Reviewed by Xan Lopez.

        https://bugs.webkit.org/show_bug.cgi?id=25415
        [GTK][ATK] Please implement support for get_text_at_offset

        Eliminate the segfaults which occur when accessing the text interface now
        implemented by text controls.

        * accessibility/gtk/AccessibilityObjectWrapperAtk.cpp:
        (getPangoLayoutForAtk):

2009-12-07  Gustavo Noronha Silva  <gns@gnome.org>

        Reviewed by Xan Lopez.

        Turn the MediaPlayer supported types blacklist into a whitelist

        [GTK] REGRESSION: webkit thinks it can render PDFs
        https://bugs.webkit.org/show_bug.cgi?id=32183

        Covered by API test.

        * platform/graphics/gtk/MediaPlayerPrivateGStreamer.cpp:
        (WebCore::mimeTypeCache):

2009-12-07  Joanmarie Diggs  <joanmarie.diggs@gmail.com>

        Reviewed by Xan Lopez.

        https://bugs.webkit.org/show_bug.cgi?id=25524
        [Gtk] Expose the title attribute to assistive technologies

        Expose 'alt' attribute from images as accessible name.
        Expose the 'title' core HTML attribute as accessible description.
        This is a modified version of the original fix submitted by Mario Sanchez Prada,
        adjusted so that it doesn't impact other platforms.

        * accessibility/gtk/AccessibilityObjectWrapperAtk.cpp:
        (webkit_accessible_get_name):
        (webkit_accessible_get_description):

2009-12-07  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        Reviewed by Simon Hausmann.

        [Qt] Fix support for generic font families

        By not propagating the resolved font family in FontCacheQt and
        only concidering the font description we ended up passing the
        generic font families to Qt directly. Since most systems don't
        have a mapping for these font families we ended up using the
        default font in most cases.

        * platform/graphics/qt/FontCacheQt.cpp: